vlib/v/checker/tests/comptime_env/env_parser_errors_2.run.out
vlib/v/checker/tests/comptime_env/env_parser_errors_2.vv:1:3: error: cannot use string interpolation in compile time $env() expression
    1 | #flag -I $env('$ABC')/xyz
      |   ~~~~~~~~~~~~~~~~~~~~~~~
