vlib/v/checker/tests/comptime_env/env_parser_errors_2.vv
#flag -I $env('$ABC')/xyz
